--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,3 +18,16 @@
   </li>
 </ul>
 
+<h2>agregando otras weas: </h2>
+<ul>
+  <li>
+    <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">wea 1</a></h2>
+  </li>
+  <li>
+    <h2><a target="_blank" rel="noopener" href="https://angular.io/cli">wea 2</a></h2>
+  </li>
+  <li>
+    <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">wea 3</a></h2>
+  </li>
+</ul>
+
