Trabajando con Dialog Angular Matarial

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,3 +9,13 @@
 <app-data-table></app-data-table>
 </div>
 
+<hr>
+
+<h2> Trabajando con Dialog de Angular Material</h2>
+<div class="container">
+    <div class="example-button-row">
+      <button mat-raised-button color="primary" (click)="openDialog()" >Open Dialog
+      </button>
+    </div>
+</div>
+
